--- a/Homework4/Homework4.tex
+++ b/Homework4/Homework4.tex
@@ -4,7 +4,7 @@
 \usepackage{float}
 
 \newcommand{\Span}[1]{\textit{Span}\{#1\}}
-
+\newcommand{\Vect}[1]{\pmb{#1}}
 \newenvironment{Mat}{\begin{bmatrix}}{\end{bmatrix}}
 
 % Assigment Info
@@ -27,25 +27,69 @@
 
 %%%% SECTION 1.9 %%%%
 
-\begin{problem}[1.9\#1]\end{problem}
+\begin{problem}[1.9\#1]
+    Assuming $T$ is a linear transformation. Find the standard matrix of $T$ where $T:\R^2 \to \R^4, T(\Vect{e_1}) = (3,1,3,1)$ and $T(\Vect{e_2}) = (-5,2,0,0)$.
+\end{problem}
 
-\begin{problem}[1.9\#3]\end{problem}
+\begin{problem}[1.9\#3]
+    Assuming $T$ is a linear transformation. Find the standard matrix of $T$ where $T:\R^2 \to \R^2$ rotates poing (about the origin) through $3\pi / 2$ radians (counterclockwise).
+\end{problem}
 
-\begin{problem}[1.9\#5]\end{problem}
+\begin{problem}[1.9\#5]
+    Assuming $T$ is a linear transformation. Find the standard matrix of $T$ where $T:\R^2 \to \R^2$ is a vertical shear transformation that maps $\Vect{e_1}$ into $\Vect{e_1} - 2\Vect{e_2}$ but leaves the vector $\Vect{e_2}$ unchanged.
+\end{problem}
 
-\begin{problem}[1.9\#10]\end{problem}
+\begin{problem}[1.9\#10]
+    Assuming $T$ is a linear transformation. Find the standard matrix of $T$ where $T:\R^2 \to \R^2$ first reflects points through the vertical $x_2$-axis and then rotates points $\pi / 2$ radians.
+\end{problem}
 
-\begin{problem}[1.9\#11]\end{problem}
+\begin{problem}[1.9\#11]
+    Assuming $T$ is a linear transformation. Find the standard matrix of $T$ where $T:\R^2 \to \R^2$ first reflects points through the $x_1$-axis and then reflects points through the $x_2$-axis.
+    Show that $T$ can also be describd as a linear transformation that roates points about the origin. What is the angle of that rotation?
+\end{problem}
 
-\begin{problem}[1.9\#15]\end{problem}
+\begin{problem}[1.9\#15]
+    Fill in the missing entries of the matrix, assuming that the equation holds for all values of the variables.
 
-\begin{problem}[1.9\#17]\end{problem}
+    \begin{equation*}
+        \begin{Mat}
+            ? & ? & ? \\
+            ? & ? & ? \\ 
+            ? & ? & ?
+        \end{Mat}
+        \begin{Mat}
+            x_1 \\ x_2 \\ x_3
+        \end{Mat} =
+        \begin{Bmatrix}
+            3x_1 - 2x_3 \\ 4x_1 \\ x_1 - x_2 + x_3
+        \end{Bmatrix}
+    \end{equation*}
+\end{problem}
 
-\begin{problem}[1.9\#20]\end{problem}
+\begin{problem}[1.9\#17]
+    Show that $T$ is a linear transformation by finiding a matrix that implments the mapping. Note that $x_1,x_2,\ldots$ are not vectors but are entries in vectors.
 
-\begin{problem}[1.9\#21]\end{problem}
+    \begin{equation*}
+        T(x_1,x_2,x_3,x_4) = (0, x_1 + x_2, x_2 + x_3, x_3 + x_4)
+    \end{equation*}
+\end{problem}
 
-\begin{problem}[1.9\#25]\end{problem}
+\begin{problem}[1.9\#20]
+    Show that $T$ is a linear transformation by finiding a matrix that implments the mapping. Note that $x_1,x_2,\ldots$ are not vectors but are entries in vectors.
+
+    \begin{equation*}
+        T(x_1,x_2,x_3,x_4) = 2x_1 + 3x_3 - 4x_4
+    \end{equation*}
+\end{problem}
+
+\begin{problem}[1.9\#21]
+    Show that $T$ is a linear transformation by finiding a matrix that implments the mapping. Note that $x_1,x_2,\ldots$ are not vectors but are entries in vectors.
+    Let $T: \R^2 \to \R^5$ such that $T(x_1, x_2) = (x_1 + x_2, 4x_1 + 5x_2)$. Find $\Vect{x}$ such that $T(\Vect{x}) = (3,8)$.
+\end{problem}
+
+\begin{problem}[1.9\#25]
+    Determine if the linear transformation in Exercise 17 is (a) one-to-one and (b) onto. Justfiy your answer.
+\end{problem}
 
 
 %%%% SECTION 2.1 %%%%
@@ -74,24 +118,24 @@
 %%%% SECTION 2.2 %%%%
 
 \begin{problem}[2.2\#1]\end{problem}
-    
+
 \begin{problem}[2.2\#5]\end{problem}
-    
+
 \begin{problem}[2.2\#7]\end{problem}
-    
+
 \begin{problem}[2.2\#9]\end{problem}
-    
+
 \begin{problem}[2.2\#13]\end{problem}
-    
+
 \begin{problem}[2.2\#15]\end{problem}
-    
+
 \begin{problem}[2.2\#17]\end{problem}
-    
+
 \begin{problem}[2.2\#19]\end{problem}
-    
+
 \begin{problem}[2.2\#21]\end{problem}
-    
+
 \begin{problem}[2.2\#31]\end{problem}
-    
+
 
 \end{document}
