--- a/Homework4/Homework4.tex
+++ b/Homework4/Homework4.tex
@@ -94,15 +94,65 @@
 
 %%%% SECTION 2.1 %%%%
 
-\begin{problem}[2.1\#1]\end{problem}
+\begin{problem}[2.1\#1]
+    Compute each matrix sum or product if it defined. If an expression is undefined, explain why.
+    \begin{equation*}
+        A = \begin{Mat}
+            2 & 0 & -1 \\ 
+            4 & -5 & 2
+        \end{Mat}, B = \begin{Mat}
+            7 & -5 & 1 \\ 
+            1 & -4 & -3
+        \end{Mat}, C = \begin{Mat}
+            1 & 2 \\ 
+            -2 & 1
+        \end{Mat}, D = \begin{Mat}
+            3 & 5 \\ 
+            -1 & 4
+        \end{Mat}, E = \begin{Mat}
+            -5 \\ 3
+        \end{Mat}
+    \end{equation*}
 
-\begin{problem}[2.1\#2]\end{problem}
+    Find $-2A, B - 2A, AC$ and $CD$.
+\end{problem}
 
-\begin{problem}[2.1\#3]\end{problem}
+\begin{problem}[2.1\#2]
+    Compute each matrix sum or product if it defined. If an expression is undefined, explain why.
+    \begin{equation*}
+        A = \begin{Mat}
+            2 & 0 & -1 \\ 
+            4 & -5 & 2
+        \end{Mat}, B = \begin{Mat}
+            7 & -5 & 1 \\ 
+            1 & -4 & -3
+        \end{Mat}, C = \begin{Mat}
+            1 & 2 \\ 
+            -2 & 1
+        \end{Mat}, D = \begin{Mat}
+            3 & 5 \\ 
+            -1 & 4
+        \end{Mat}, E = \begin{Mat}
+            -5 \\ 3
+        \end{Mat}
+    \end{equation*}
 
-\begin{problem}[2.1\#5]\end{problem}
+    Find $-A + 2B, 3C - E, CB$ and $EB$.
+\end{problem}
 
-\begin{problem}[2.1\#7]\end{problem}
+\begin{problem}[2.1\#3]
+    Let $A = \begin{Mat}
+        4 & -1 \\ 5 & -2
+    \end{Mat}$. Compute $3I_2 - A$ and $(3I_2)A$.
+\end{problem}
+
+\begin{problem}[2.1\#5]
+    Compute the product $AB$ in two ways: (a) by the definition, where $A\Vect{b_1}$ and $A\Vect{b_2}$ are computed separately, and (b) by the row-column rule for computing $AB$.
+\end{problem}
+
+\begin{problem}[2.1\#7]
+    If a matrix $A$ is $5 \times 3$ and the product $AB$ is $5 \times 7$, what is the size of $B$.
+\end{problem}
 
 \begin{problem}[2.1\#9]\end{problem}
 
